# openclaw-manager

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: claudecode.rs  codex.rs  config.rs  diagnostics.rs  installer.rs  mod.rs  process.rs
src-tauri/src/utils/: shell.rs
src/components/ClaudeCode/: index.tsx
src/components/Codex/: index.tsx
src/components/Dashboard/: index.tsx
src/components/InstallUI/: InstallActionCard.tsx  InstallToolbar.tsx  StatusHeaderCard.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Logs/: index.tsx
src/components/ModuleDetail/: index.tsx
src/components/ModulePlaceholder/: index.tsx
src/components/Modules/: index.tsx
src/components/Settings/: index.tsx
src/components/Setup/: index.tsx
src/components/Skills/: index.tsx
src/lib/: logger.ts  tauri.ts
src/modules/: registry.ts
src/styles/: globals.css
src/types/: modules.ts
